// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly 1`] = `
[
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <RNSScreenNavigationContainer
      style={
        {
          "flex": 1,
          "overflow": "hidden",
        }
      }
    >
      <RNSScreen
        activityState={2}
        collapsable={false}
        forwardedRef={[Function]}
        gestureResponseDistance={
          {
            "bottom": -1,
            "end": -1,
            "start": -1,
            "top": -1,
          }
        }
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 0,
          }
        }
      >
        <View
          accessibilityElementsHidden={false}
          importantForAccessibility="auto"
          style={
            [
              {
                "backgroundColor": "rgb(242, 242, 242)",
                "flex": 1,
              },
              [
                {
                  "flex": 1,
                  "flexDirection": "column-reverse",
                },
                undefined,
              ],
            ]
          }
        >
          <View
            style={
              {
                "flex": 1,
              }
            }
          >
            <View>
              <Text>
                Strona główna
              </Text>
            </View>
          </View>
        </View>
      </RNSScreen>
    </RNSScreenNavigationContainer>
    <View
      collapsable={false}
      onLayout={[Function]}
      pointerEvents="auto"
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 15,
          "borderTopColor": "rgb(216, 216, 216)",
          "borderTopWidth": 0.5,
          "bottom": 15,
          "elevation": 5,
          "height": 90,
          "left": 15,
          "paddingBottom": 0,
          "paddingHorizontal": 0,
          "position": "absolute",
          "right": 15,
          "shadowColor": "#7F5DF0",
          "shadowOffset": {
            "height": 10,
            "width": 0,
          },
          "shadowOpacity": 0.25,
          "shadowRadius": 3.5,
          "transform": [
            {
              "translateY": 0,
            },
          ],
        }
      }
    >
      <View
        pointerEvents="none"
        style={
          {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      />
      <View
        accessibilityRole="tablist"
        style={
          {
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          accessibilityLabel="Home, tab, 1 of 5"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": true,
            }
          }
          accessibilityStates={
            [
              "selected",
            ]
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
              },
              {
                "backgroundColor": "transparent",
              },
              {
                "flexDirection": "column",
                "justifyContent": "flex-end",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "flex": 1,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 1,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/home.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#e32f45",
                      "width": 30,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#e32f45",
                      "fontSize": 14,
                    }
                  }
                >
                  Instrukcja
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/home.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#748c94",
                      "width": 30,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#748c94",
                      "fontSize": 14,
                    }
                  }
                >
                  Instrukcja
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Menu, tab, 2 of 5"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityStates={[]}
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
              },
              {
                "backgroundColor": "transparent",
              },
              {
                "flexDirection": "column",
                "justifyContent": "flex-end",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "flex": 1,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/menu.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#e32f45",
                      "width": 30,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#e32f45",
                      "fontSize": 14,
                    }
                  }
                >
                  Menu
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 1,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/menu.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#748c94",
                      "width": 30,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#748c94",
                      "fontSize": 14,
                    }
                  }
                >
                  Menu
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "alignItems": "center",
              "elevation": 5,
              "justifyContent": "center",
              "opacity": 1,
              "shadowColor": "#7F5DF0",
              "shadowOffset": {
                "height": 10,
                "width": 0,
              },
              "shadowOpacity": 0.25,
              "shadowRadius": 3.5,
              "top": -30,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#e32f45",
                "borderRadius": 35,
                "height": 70,
                "width": 70,
              }
            }
          >
            <View
              style={
                [
                  {
                    "flex": 1,
                  },
                  undefined,
                ]
              }
            >
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "height": "100%",
                      "justifyContent": "center",
                      "minWidth": 25,
                      "position": "absolute",
                      "width": "100%",
                    },
                    {
                      "opacity": 0,
                    },
                  ]
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/qr.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#ffffff",
                      "width": 30,
                    }
                  }
                />
              </View>
              <View
                style={
                  [
                    {
                      "alignItems": "center",
                      "alignSelf": "center",
                      "height": "100%",
                      "justifyContent": "center",
                      "minWidth": 25,
                      "position": "absolute",
                      "width": "100%",
                    },
                    {
                      "opacity": 1,
                    },
                  ]
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/qr.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#ffffff",
                      "width": 30,
                    }
                  }
                />
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Cart, tab, 4 of 5"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityStates={[]}
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
              },
              {
                "backgroundColor": "transparent",
              },
              {
                "flexDirection": "column",
                "justifyContent": "flex-end",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "flex": 1,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/shopping-cart.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#e32f45",
                      "width": 30,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#e32f45",
                      "fontSize": 14,
                    }
                  }
                >
                  Koszyk
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 1,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/shopping-cart.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#748c94",
                      "width": 30,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#748c94",
                      "fontSize": 14,
                    }
                  }
                >
                  Koszyk
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Account, tab, 5 of 5"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": false,
            }
          }
          accessibilityStates={[]}
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "flex": 1,
              },
              {
                "backgroundColor": "transparent",
              },
              {
                "flexDirection": "column",
                "justifyContent": "flex-end",
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "flex": 1,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/user.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#e32f45",
                      "width": 30,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#e32f45",
                      "fontSize": 14,
                    }
                  }
                >
                  Konto
                </Text>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 1,
                  },
                ]
              }
            >
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "column",
                    "justifyContent": "center",
                  }
                }
              >
                <Image
                  resizeMode="contain"
                  source={
                    {
                      "testUri": "../../../src/assets/icons/user.png",
                    }
                  }
                  style={
                    {
                      "height": 30,
                      "tintColor": "#748c94",
                      "width": 30,
                    }
                  }
                />
                <Text
                  style={
                    {
                      "color": "#748c94",
                      "fontSize": 14,
                    }
                  }
                >
                  Konto
                </Text>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>,
  <View
    collapsable={false}
    onLayout={[Function]}
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    pointerEvents="box-none"
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
        "left": 0,
        "opacity": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "transform": [
          {
            "translateY": 0,
          },
        ],
      }
    }
    testID="toastAnimatedContainer"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#FFF",
          "borderLeftColor": "green",
          "borderLeftWidth": 5,
          "borderRadius": 6,
          "elevation": 2,
          "flexDirection": "row",
          "height": 100,
          "opacity": 1,
          "shadowOffset": {
            "height": 0,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 6,
          "width": 340,
        }
      }
      testID="toastTouchableContainer"
    >
      <View
        style={
          [
            {
              "alignItems": "flex-start",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 25,
            },
            {
              "paddingHorizontal": 20,
            },
          ]
        }
        testID="toastContentContainer"
      />
    </View>
  </View>,
]
`;

exports[`Cart renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "flexGrow": 1,
      "padding": 16,
      "paddingBottom": 140,
    }
  }
>
  <View>
    <View>
      <Text
        style={
          {
            "fontSize": 24,
            "fontWeight": "bold",
            "marginBottom": 16,
          }
        }
      >
        Koszyk jest pusty
      </Text>
      <View
        style={
          {
            "marginVertical": 16,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginBottom": 8,
            }
          }
        >
          Metoda płatności:
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "marginBottom": 8,
              }
            }
          >
            Gotówka
          </Text>
        </View>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "fontSize": 16,
                "marginBottom": 8,
              }
            }
          >
            Karta
          </Text>
        </View>
      </View>
      <View
        style={
          {
            "marginVertical": 16,
          }
        }
      >
        <Text
          style={
            {
              "fontSize": 18,
              "fontWeight": "bold",
              "marginBottom": 8,
            }
          }
        >
          Numer stolika: 
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Zamów
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onHide={[Function]}
      renderToHardwareTextureAndroid={true}
      transparent={true}
      useNativeDriver={false}
      visible={false}
    />
  </View>
</RCTScrollView>
`;

exports[`Change password renders correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "justifyContent": "center",
      "marginTop": 10,
    }
  }
>
  <RCTScrollView
    showsVerticalScrollIndicator={false}
    style={
      {
        "paddingHorizontal": 25,
      }
    }
  >
    <View>
      <Text
        style={
          {
            "color": "#333",
            "fontFamily": "Roboto-Medium",
            "fontSize": 28,
            "fontWeight": "500",
            "marginBottom": 30,
          }
        }
      >
        Zmień hasło
      </Text>
      <View
        style={
          {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "marginBottom": 25,
            "paddingBottom": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#666",
                "fontSize": 20,
              },
              {
                "marginRight": 5,
              },
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <TextInput
          onChangeText={[Function]}
          placeholder="Stare Hasło"
          secureTextEntry={true}
          style={
            {
              "flex": 1,
              "paddingVertical": 0,
            }
          }
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#AD40AF",
                "fontWeight": "700",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "marginBottom": 25,
            "paddingBottom": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#666",
                "fontSize": 20,
              },
              {
                "marginRight": 5,
              },
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <TextInput
          onChangeText={[Function]}
          placeholder="Nowe hasło"
          secureTextEntry={true}
          style={
            {
              "flex": 1,
              "paddingVertical": 0,
            }
          }
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#AD40AF",
                "fontWeight": "700",
              }
            }
          />
        </View>
      </View>
      <View
        style={
          {
            "borderBottomColor": "#ccc",
            "borderBottomWidth": 1,
            "flexDirection": "row",
            "marginBottom": 25,
            "paddingBottom": 8,
          }
        }
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#666",
                "fontSize": 20,
              },
              {
                "marginRight": 5,
              },
              {
                "fontFamily": "Ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
        <TextInput
          onChangeText={[Function]}
          placeholder="Powtórz nowe hasło"
          secureTextEntry={true}
          style={
            {
              "flex": 1,
              "paddingVertical": 0,
            }
          }
        />
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <Text
            style={
              {
                "color": "#AD40AF",
                "fontWeight": "700",
              }
            }
          />
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Zmień hasło
        </Text>
      </View>
    </View>
  </RCTScrollView>
</RCTSafeAreaView>
`;

exports[`Login renders correctly 1`] = `
<RCTSafeAreaView
  style={
    {
      "flex": 1,
      "marginTop": 20,
    }
  }
>
  <View
    style={
      {
        "paddingHorizontal": 25,
      }
    }
  >
    <Text
      style={
        {
          "color": "#333",
          "fontFamily": "Roboto-Medium",
          "fontSize": 28,
          "fontWeight": "500",
          "marginBottom": 30,
        }
      }
    >
      Zaloguj
    </Text>
    <View
      style={
        {
          "borderBottomColor": "#ccc",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "marginBottom": 25,
          "paddingBottom": 8,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#666",
              "fontSize": 20,
            },
            {
              "marginRight": 5,
            },
            {
              "fontFamily": "Material Icons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <TextInput
        keyboardType="email-address"
        onChangeText={[Function]}
        placeholder="Email"
        style={
          {
            "flex": 1,
            "paddingVertical": 0,
          }
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#AD40AF",
              "fontWeight": "700",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        {
          "borderBottomColor": "#ccc",
          "borderBottomWidth": 1,
          "flexDirection": "row",
          "marginBottom": 25,
          "paddingBottom": 8,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#666",
              "fontSize": 20,
            },
            {
              "marginRight": 5,
            },
            {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
      <TextInput
        onChangeText={[Function]}
        placeholder="Hasło"
        secureTextEntry={true}
        style={
          {
            "flex": 1,
            "paddingVertical": 0,
          }
        }
      />
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#AD40AF",
              "fontWeight": "700",
            }
          }
        />
      </View>
    </View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "backgroundColor": "#e32f45",
          "borderRadius": 10,
          "margin": 10,
          "marginBottom": 30,
          "opacity": 1,
          "padding": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#fff",
            "fontSize": 16,
            "fontWeight": "700",
            "textAlign": "center",
          }
        }
      >
        Zaloguj
      </Text>
    </View>
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginBottom": 30,
        }
      }
    >
      <Text>
        Nie masz konta?
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
          }
        }
      >
        <Text
          style={
            {
              "color": "#AD40AF",
              "fontWeight": "700",
            }
          }
        >
           Zarejestruj
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Menu renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#f5f5f5",
      "flexGrow": 1,
      "paddingBottom": 110,
    }
  }
  refreshControl={
    <RefreshControlMock
      onRefresh={[Function]}
      refreshing={false}
    />
  }
>
  <RCTRefreshControl />
  <View>
    <View>
      <View
        style={
          {
            "alignItems": "center",
            "marginBottom": 20,
            "marginTop": 50,
          }
        }
      >
        <Text
          style={
            {
              "color": "#333333",
              "fontSize": 36,
              "fontWeight": "bold",
            }
          }
        >
          Menu
        </Text>
      </View>
      <ActivityIndicator />
    </View>
  </View>
</RCTScrollView>
`;

exports[`Order details renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#f5f5f5",
      "flexGrow": 1,
      "paddingBottom": 110,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 28,
            "fontWeight": "500",
          }
        }
      >
        Zamówienie
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 20,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
          "marginBottom": 20,
          "paddingHorizontal": 15,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Razem: 
         zł
      </Text>
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Data: 
        Invalid Date
      </Text>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 20,
          "marginRight": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Pokaż
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Powtórz zamówienie
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onHide={[Function]}
      renderToHardwareTextureAndroid={true}
      transparent={true}
      useNativeDriver={false}
      visible={false}
    />
  </View>
</RCTScrollView>
`;

exports[`Order history renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#f5f5f5",
      "flexGrow": 1,
      "paddingBottom": 110,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 28,
            "fontWeight": "500",
          }
        }
      >
        Zamówienie
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 20,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
          "marginBottom": 20,
          "paddingHorizontal": 15,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Razem: 
         zł
      </Text>
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Data: 
        Invalid Date
      </Text>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 20,
          "marginRight": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Pokaż
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Powtórz zamówienie
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onHide={[Function]}
      renderToHardwareTextureAndroid={true}
      transparent={true}
      useNativeDriver={false}
      visible={false}
    />
  </View>
</RCTScrollView>
`;

exports[`Recommendation renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#f5f5f5",
      "flexGrow": 1,
      "paddingBottom": 110,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 28,
            "fontWeight": "500",
          }
        }
      >
        Zamówienie
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 20,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
          "marginBottom": 20,
          "paddingHorizontal": 15,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Razem: 
         zł
      </Text>
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Data: 
        Invalid Date
      </Text>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 20,
          "marginRight": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Pokaż
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Powtórz zamówienie
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onHide={[Function]}
      renderToHardwareTextureAndroid={true}
      transparent={true}
      useNativeDriver={false}
      visible={false}
    />
  </View>
</RCTScrollView>
`;

exports[`Register renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#f5f5f5",
      "flexGrow": 1,
      "paddingBottom": 110,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 28,
            "fontWeight": "500",
          }
        }
      >
        Zamówienie
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 20,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
          "marginBottom": 20,
          "paddingHorizontal": 15,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Razem: 
         zł
      </Text>
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Data: 
        Invalid Date
      </Text>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 20,
          "marginRight": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Pokaż
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Powtórz zamówienie
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onHide={[Function]}
      renderToHardwareTextureAndroid={true}
      transparent={true}
      useNativeDriver={false}
      visible={false}
    />
  </View>
</RCTScrollView>
`;

exports[`Scanner renders correctly 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "backgroundColor": "#f5f5f5",
      "flexGrow": 1,
      "paddingBottom": 110,
    }
  }
>
  <View>
    <View
      style={
        {
          "alignItems": "center",
          "marginTop": 20,
        }
      }
    >
      <Text
        style={
          {
            "color": "#333",
            "fontSize": 28,
            "fontWeight": "500",
          }
        }
      >
        Zamówienie
      </Text>
    </View>
    <View
      style={
        {
          "backgroundColor": "#ffffff",
          "borderRadius": 20,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "margin": 10,
          "marginBottom": 20,
          "paddingHorizontal": 15,
          "paddingVertical": 10,
        }
      }
    >
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Razem: 
         zł
      </Text>
      <Text
        style={
          {
            "color": "#666666",
            "fontSize": 18,
            "marginBottom": 5,
          }
        }
      >
        Data: 
        Invalid Date
      </Text>
    </View>
    <View
      style={
        {
          "display": "flex",
          "flexDirection": "row",
          "justifyContent": "center",
          "marginLeft": 20,
          "marginRight": 20,
        }
      }
    >
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Pokaż
        </Text>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "backgroundColor": "#e32f45",
            "borderRadius": 10,
            "margin": 10,
            "marginBottom": 30,
            "opacity": 1,
            "padding": 20,
          }
        }
      >
        <Text
          style={
            {
              "color": "#fff",
              "fontSize": 16,
              "fontWeight": "700",
              "textAlign": "center",
            }
          }
        >
          Powtórz zamówienie
        </Text>
      </View>
    </View>
    <Modal
      animationType="none"
      hardwareAccelerated={false}
      onHide={[Function]}
      renderToHardwareTextureAndroid={true}
      transparent={true}
      useNativeDriver={false}
      visible={false}
    />
  </View>
</RCTScrollView>
`;

exports[`Tabs renders correctly 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <RNSScreenNavigationContainer
    style={
      {
        "flex": 1,
        "overflow": "hidden",
      }
    }
  >
    <RNSScreen
      activityState={2}
      collapsable={false}
      forwardedRef={[Function]}
      gestureResponseDistance={
        {
          "bottom": -1,
          "end": -1,
          "start": -1,
          "top": -1,
        }
      }
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "zIndex": 0,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        style={
          [
            {
              "backgroundColor": "rgb(242, 242, 242)",
              "flex": 1,
            },
            [
              {
                "flex": 1,
                "flexDirection": "column-reverse",
              },
              undefined,
            ],
          ]
        }
      >
        <View
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <Text>
              Strona główna
            </Text>
          </View>
        </View>
      </View>
    </RNSScreen>
  </RNSScreenNavigationContainer>
  <View
    collapsable={false}
    onLayout={[Function]}
    pointerEvents="auto"
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 15,
        "borderTopColor": "rgb(216, 216, 216)",
        "borderTopWidth": 0.5,
        "bottom": 15,
        "elevation": 5,
        "height": 90,
        "left": 15,
        "paddingBottom": 0,
        "paddingHorizontal": 0,
        "position": "absolute",
        "right": 15,
        "shadowColor": "#7F5DF0",
        "shadowOffset": {
          "height": 10,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.5,
        "transform": [
          {
            "translateY": 0,
          },
        ],
      }
    }
  >
    <View
      pointerEvents="none"
      style={
        {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        }
      }
    />
    <View
      accessibilityRole="tablist"
      style={
        {
          "flex": 1,
          "flexDirection": "row",
        }
      }
    >
      <View
        accessibilityLabel="Home, tab, 1 of 5"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": true,
          }
        }
        accessibilityStates={
          [
            "selected",
          ]
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
            },
            {
              "backgroundColor": "transparent",
            },
            {
              "flexDirection": "column",
              "justifyContent": "flex-end",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "width": "100%",
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/home.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#e32f45",
                    "width": 30,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#e32f45",
                    "fontSize": 14,
                  }
                }
              >
                Instrukcja
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "width": "100%",
                },
                {
                  "opacity": 0,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/home.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#748c94",
                    "width": 30,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#748c94",
                    "fontSize": 14,
                  }
                }
              >
                Instrukcja
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Menu, tab, 2 of 5"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityStates={[]}
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
            },
            {
              "backgroundColor": "transparent",
            },
            {
              "flexDirection": "column",
              "justifyContent": "flex-end",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "width": "100%",
                },
                {
                  "opacity": 0,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/menu.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#e32f45",
                    "width": 30,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#e32f45",
                    "fontSize": 14,
                  }
                }
              >
                Menu
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "width": "100%",
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/menu.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#748c94",
                    "width": 30,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#748c94",
                    "fontSize": 14,
                  }
                }
              >
                Menu
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "elevation": 5,
            "justifyContent": "center",
            "opacity": 1,
            "shadowColor": "#7F5DF0",
            "shadowOffset": {
              "height": 10,
              "width": 0,
            },
            "shadowOpacity": 0.25,
            "shadowRadius": 3.5,
            "top": -30,
          }
        }
      >
        <View
          style={
            {
              "backgroundColor": "#e32f45",
              "borderRadius": 35,
              "height": 70,
              "width": 70,
            }
          }
        >
          <View
            style={
              [
                {
                  "flex": 1,
                },
                undefined,
              ]
            }
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 0,
                  },
                ]
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/qr.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#ffffff",
                    "width": 30,
                  }
                }
              />
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "height": "100%",
                    "justifyContent": "center",
                    "minWidth": 25,
                    "position": "absolute",
                    "width": "100%",
                  },
                  {
                    "opacity": 1,
                  },
                ]
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/qr.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#ffffff",
                    "width": 30,
                  }
                }
              />
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Cart, tab, 4 of 5"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityStates={[]}
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
            },
            {
              "backgroundColor": "transparent",
            },
            {
              "flexDirection": "column",
              "justifyContent": "flex-end",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "width": "100%",
                },
                {
                  "opacity": 0,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/shopping-cart.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#e32f45",
                    "width": 30,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#e32f45",
                    "fontSize": 14,
                  }
                }
              >
                Koszyk
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "width": "100%",
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/shopping-cart.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#748c94",
                    "width": 30,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#748c94",
                    "fontSize": 14,
                  }
                }
              >
                Koszyk
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        accessibilityLabel="Account, tab, 5 of 5"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": false,
          }
        }
        accessibilityStates={[]}
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          [
            {
              "alignItems": "center",
              "flex": 1,
            },
            {
              "backgroundColor": "transparent",
            },
            {
              "flexDirection": "column",
              "justifyContent": "flex-end",
            },
            undefined,
          ]
        }
      >
        <View
          style={
            [
              {
                "flex": 1,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "width": "100%",
                },
                {
                  "opacity": 0,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/user.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#e32f45",
                    "width": 30,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#e32f45",
                    "fontSize": 14,
                  }
                }
              >
                Konto
              </Text>
            </View>
          </View>
          <View
            style={
              [
                {
                  "alignItems": "center",
                  "alignSelf": "center",
                  "height": "100%",
                  "justifyContent": "center",
                  "minWidth": 25,
                  "position": "absolute",
                  "width": "100%",
                },
                {
                  "opacity": 1,
                },
              ]
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "column",
                  "justifyContent": "center",
                }
              }
            >
              <Image
                resizeMode="contain"
                source={
                  {
                    "testUri": "../../../src/assets/icons/user.png",
                  }
                }
                style={
                  {
                    "height": 30,
                    "tintColor": "#748c94",
                    "width": 30,
                  }
                }
              />
              <Text
                style={
                  {
                    "color": "#748c94",
                    "fontSize": 14,
                  }
                }
              >
                Konto
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
